02-networking/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
    app: nginx-coffee
  name: nginx-coffee
  namespace: networking
spec:
  containers:
  - image: nginx
    name: nginx-coffee
    resources:
      requests:
        cpu: 0.5
        memory: 256Mi
      limits:
        cpu: 2
        memory: 512Mi
    volumeMounts:
    - name: nginx-index-file
      mountPath: /usr/share/nginx/html/
    ports:
    - containerPort: 80
      protocol: TCP
  restartPolicy: Always
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-coffee

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
    app: nginx-tea
  name: nginx-tea
  namespace: networking
spec:
  containers:
  - image: nginx
    name: nginx-tea
    resources:
      requests:
        cpu: 0.5
        memory: 256Mi
      limits:
        cpu: 2
        memory: 512Mi
    volumeMounts:
    - name: nginx-index-file
      mountPath: /usr/share/nginx/html/
    ports:
    - containerPort: 80
      protocol: TCP
  restartPolicy: Always
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-tea

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-external
  namespace: networking
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-internal
  namespace: networking
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
